syntax = "proto3";
package Generators.Models;

message Author {
   int32 BirthYear = 1;
   string FirstName = 2;
   string LastName = 3;
}
message Book {
   repeated Author Authors = 1;
   int32 Pages = 2;
   string Title = 3;
}
message Catalog {
   repeated Book Books = 1;
}
